Aviso legal para landing page terminado

--- a/static/html/index.html
+++ b/static/html/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
 </head>
 <div class="container">
-    <form action="/generar">
+    <form action="/generar" method="POST">
         <div class="form-group row">
             <label for="inputName" class="col-sm-1-12 col-form-label"></label>
             <div class="col-sm-1-12"></div>
